--- a/book.bib
+++ b/book.bib
@@ -6,5 +6,15 @@
   year = {2015},
   edition = {2nd},
   note = {ISBN 978-1498716963},
-  url = {http://yihui.org/knitr/},
+  url = {http://yihui.org/knitr/}
+}
+
+@Article{YuEtAl1982,
+  author = {Byung Pal Yu and Edward J. Masoro and Ikuo Murata and Helen A. Bertrand and Frederick T. Lynd},
+  year = 1982,
+  journal = {Journal of Gerontology},
+  title =   {Life Span Study of {SPF Fischer} 344 Male Rats Fed Ad Libitum or Restricted Diets: Longevity, Growth, Lean Body Mass and Disease},
+  volume = 37,
+  number = 2,
+  pages =   {130--141}
 }
