--- a/index.Rmd
+++ b/index.Rmd
@@ -7,7 +7,8 @@ documentclass: book
 bibliography:
 - book.bib
 - packages.bib
-biblio-style: apalike
+# biblio-style: apalike
+csl: apa.csl
 link-citations: yes
 description: Laboratory exercises for APSY210.
 ---
