--- a/book.bib
+++ b/book.bib
@@ -18,3 +18,22 @@
   number = 2,
   pages =   {130--141}
 }
+
+@Article{Anscombe1973,
+  author =  {F. J. Anscombe},
+  title =   {Graphs in Statistical Analysis},
+  year = 1973,
+  journal =   {The American Statistician},
+  volume = 27,
+  number = 1,
+  pages = {17--21}
+}
+
+@Article{RyanGauthier2016,
+  author = {Kaitlin F. Ryan and Isabel Gauthier},
+  title = {Gender differences in recognition of toy faces suggest a contribution of experience},
+  year = 2016,
+  journal = {Vision Research},
+  volume =  129,
+  pages = {69--76}
+}
