--- a/03-correlation.Rmd
+++ b/03-correlation.Rmd
@@ -110,13 +110,13 @@ as well as its standard deviation^[What code will find the standard deviation of
 sd(Y)
 ```
 
-Finally, let's find the $z$ scores for each of our $Y$ values and tell R to remember them with the label `z_Y`^[What code would you write to do this? *Hint: what code did we use to calculate and remember the $z$ scores for $X$?*]:
+Finally, let's find the $z$ scores for each of our $Y$ values and tell R to remember them with the label `z_Y`^[What code would you write to do this? *Hint: what code did we use to calculate and remember the $z$ scores for $X$?*].
 
 ```{r echo=FALSE}
 z_Y <- (Y - mean(Y)) / sd(Y)
 ```
 
-If we've done our job right, we should get the following output when we ask R to remember what we put into `z_Y`
+If we've done our job right, we should get the following output when we ask R to remember what we put into `z_Y`:
 
 ```{r}
 z_Y
