--- a/book.bib
+++ b/book.bib
@@ -37,3 +37,41 @@
   volume =  129,
   pages = {69--76}
 }
+
+@Article{Galton1907,
+    author = {Francis Galton},
+    title =     {Vox populi},
+    year = 1907,
+    journal = {Nature},
+    volume = 75,
+    number = 1949,
+    pages = {450--451}
+}
+
+@Book{Surowiecki2004,
+    author = {J. Surowiecki},
+    title =     {The Wisdom of Crowds},
+    year = 2004,
+    publisher = {Random House},
+    address = {New York}
+}
+
+@Article{SteegenEtAl2014,
+    author = {Sara Steegen and Laura Dewitte and Francis Tuerlinckx and Wolf Vanpaemel},
+    title =     {Measuring the crowd within again: a pre-registered replication study},
+    year = 2014,
+    journal = {Frontiers in Psychology},
+    volume = 5,
+    number = 786,
+    pages = {1--8}
+}
+
+@Article{VulPashler2008,
+    author = {Edward Vul and Harold Pashler},
+    title =     {Measuring the Crowd Within: Probabilistic Representations Within Individuals},
+    year = 2008,
+    journal = {Psychological Science},
+    volume = 19,
+    number = 7,
+    pages = {645--647}
+}
