--- a/book.bib
+++ b/book.bib
@@ -1,3 +1,13 @@
+@Article{DayEtAl2015,
+    author = {Samuel B. Day and Benjamin A. Motz and Robert L. Goldstone},
+    title =     {The Cognitive Costs of Context: The Effects of Concreteness and Immersiveness in Instructional Examples},
+    year = 2015,
+    journal = {Frontiers in Psychology},
+    volume = 6,
+    number = 1876,
+    pages = {1--13}
+}
+
 @Book{xie2015,
   title = {Dynamic Documents with {R} and knitr},
   author = {Yihui Xie},
