--- a/98-formulas.Rmd
+++ b/98-formulas.Rmd
@@ -70,6 +70,46 @@ or
 qbinom(p = given_probability, prob = this_prob, size = this_size)
 ```
 
+### Testing a null hypothesis
+
+The following are important bits of code for conducting null hypothesis tests with the binomial distribution.  For the following examples, I have told R to remember the following labeled values, in addition to the ones above.
+
+```{r}
+null_prob <- 0.5
+
+sample_value <- 6
+
+alpha_level <- 0.1
+```
+
+#### One-tailed test (alternative is that probability is *less* than null probability)
+
+##### Boundary of confidence interval
+
+```{r}
+ci_boundary <- qbinom(p = alpha_level, prob = null_prob, size = this_size)
+```
+
+##### $p$ value
+
+```{r}
+pbinom(q = sample_value, prob = null_prob, size = this_size)
+```
+
+#### One-tailed test (alternative is that probability is *greater* than null probability)
+
+##### Boundary of confidence interval
+
+```{r}
+ci_boundary <- qbinom(p = 1 - alpha_level, prob = null_prob, size = this_size)
+```
+
+##### $p$ value
+
+```{r}
+1 - pbinom(q = sample_value - 1, prob = null_prob, size = this_size)
+```
+
 ## Normal distribution
 
 For the following examples, I am using the following labeled values so you can see the kind of result R will give you.
@@ -118,9 +158,109 @@ or
 1 - pnorm(q = upper_value, mean = this_mean, sd = this_sd) + pnorm(q = lower_value, mean = this_mean, sd = this_sd)
 ```
 
-
 ### The value for which there is a given probability of observing an outcome less than or equal to that value
 
 ```{r}
 qnorm(p = given_probability, mean = this_mean, sd = this_sd)
+```
+
+### Testing a null hypothesis
+
+The following are important bits of code for conducting null hypothesis tests with the normal distribution (see [this lab](#lab8) for additional examples).  For the following examples, I have told R to remember the following labeled values.
+
+```{r}
+null_mean <- 0
+null_sd <- 1
+
+sample_size <- 30
+
+sample_mean <- 0.3
+
+effect_size <- 0.5
+
+alpha_level <- 0.1
+```
+
+#### Standard error of the mean
+
+```{r}
+null_sd / sqrt(sample_size)
+```
+
+#### One-tailed test (alternative is that mean is *less* than null mean)
+
+##### Boundary of confidence interval
+
+```{r}
+ci_boundary <- qnorm(p = alpha_level, mean = null_mean, sd = null_sd / sqrt(sample_size))
+```
+
+##### $p$ value
+
+```{r}
+pnorm(q = sample_mean, mean = null_mean, sd = null_sd / sqrt(sample_size))
+```
+
+##### Power
+
+```{r}
+pnorm(q = ci_boundary, mean = null_mean + effect_size, sd = null_sd / sqrt(sample_size))
+```
+
+#### One-tailed test (alternative is that mean is *greater* than null mean)
+
+##### Boundary of confidence interval
+
+```{r}
+ci_boundary <- qnorm(p = 1 - alpha_level, mean = null_mean, sd = null_sd / sqrt(sample_size))
+```
+
+##### $p$ value
+
+```{r}
+1 - pnorm(q = sample_mean, mean = null_mean, sd = null_sd / sqrt(sample_size))
+```
+
+##### Power
+
+```{r}
+1 - pnorm(q = ci_boundary, mean = null_mean + effect_size, sd = null_sd / sqrt(sample_size))
+```
+
+#### Two-tailed test
+
+##### Boundaries of confidence interval
+
+```{r}
+ci_lower <- qnorm(p = alpha_level / 2, mean = null_mean, sd = null_sd / sqrt(sample_size))
+ci_upper <- qnorm(p = 1 - alpha_level / 2, mean = null_mean, sd = null_sd / sqrt(sample_size))
+```
+
+##### $p$ value
+
+If `sample_mean > null_mean`:
+
+```{r}
+2 * (1 - pnorm(q = sample_mean, mean = null_mean, sd = null_sd / sqrt(sample_size)))
+```
+
+If `sample_mean <= null_mean`:
+
+```{r echo=FALSE}
+sample_mean <- -abs(sample_mean)
+```
+
+```{r}
+2 * pnorm(q = sample_mean, mean = null_mean, sd = null_sd / sqrt(sample_size))
+```
+
+```{r echo=FALSE}
+sample_mean <- abs(sample_mean)
+```
+
+##### Power
+
+```{r}
+pnorm(q = ci_lower, mean = null_mean + effect_size, sd = null_sd / sqrt(sample_size)) +
+    1 - pnorm(q = ci_upper, mean = null_mean + effect_size, sd = null_sd / sqrt(sample_size))
 ```
