--- a/book.bib
+++ b/book.bib
@@ -1,3 +1,13 @@
+@Article{MehrEtAl2016,
+    author = {Samuel A. Mehr and Lee Ann Song and Elizabeth S. Spelke},
+    title =     {For 5-Month-Old Infants, Melodies Are Social},
+    year = 2016,
+    journal = {Psychological Science},
+    volume = 27,
+    number = 4,
+    pages = {486--501}
+}
+
 @Article{DayEtAl2015,
     author = {Samuel B. Day and Benjamin A. Motz and Robert L. Goldstone},
     title =     {The Cognitive Costs of Context: The Effects of Concreteness and Immersiveness in Instructional Examples},
