Add t tests to appendix

--- a/97-formulas.Rmd
+++ b/97-formulas.Rmd
@@ -1,6 +1,6 @@
 # (APPENDIX) Appendix {-}
 
-# R Code Reference {#coderef}
+# Distributions {#coderef}
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
