Put back plotting instructions.

--- a/01-exploring.Rmd
+++ b/01-exploring.Rmd
@@ -241,6 +241,8 @@ Make a bar chart to help answer the question, "where did most passengers board t
 
 What code did you use?  And where did most passengers board the *Titanic*?
 
+Attach a copy of the bar chart you made.  You can do this by saving the chart as a file using the "Export" menu in the "Plots" pane in RStudio.
+
 :::
 
 ### Histograms
@@ -278,7 +280,11 @@ titanic %>%
 ```
 
 ::: {.exercise}
-Try making several different histograms of passenger age with different bin widths by changing the number "10" in the code above to different values.  What bin width do you believe gives the best visual summary of the age distribution across passengers, and why?
+Try making several different histograms of passenger age with different bin widths by changing the number "10" in the code above to different values.
+
+What bin width do you believe gives the best visual summary of the age distribution across passengers, and why?
+
+Attach a copy of the histogram you made with your favorite bin width (again, you can do this by saving your plot as a file using the "Export" menu in RStudio's Plots pane).
 
 :::
 
